--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/lang.js"></script>
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	</body>
 </html>
 
