--- a/index.html
+++ b/index.html
@@ -424,6 +424,8 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
