--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<a href="javascript:void(0)" @click="login"><div class="author-img" style="background-image: url(images/about.jpg);"></div></a>
-				<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				<div class="g-signin2" data-onsuccess="app.onSignIn"></div>
 				<button class="btn btn-hire" data-toggle="tooltip" :title="$t('langTitle')" style="outline: 0;margin-bottom: 10px;" @click="changeLang">
 					<span class="icon-globe2" aria-hidden="true">{{ $t("lang") }}</span>
 				</button>
@@ -427,15 +427,6 @@
 	<script src="js/jquery.countTo.js"></script>
 	
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script>
-		function onSignIn(googleUser) {
-			var profile = googleUser.getBasicProfile();
-			console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-			console.log('Name: ' + profile.getName());
-			console.log('Image URL: ' + profile.getImageUrl());
-			console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-		}
-	</script>
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
