--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<a href="javascript:void(0)" @click="login"><div class="author-img" style="background-image: url(images/about.jpg);"></div></a>
-				<div class="g-signin2" data-onsuccess="app.onSignIn"></div>
+				<div class="g-signin2" id="google-signin-button" data-onsuccess="app.onSignIn"></div>
 				<button class="btn btn-hire" data-toggle="tooltip" :title="$t('langTitle')" style="outline: 0;margin-bottom: 10px;" @click="changeLang">
 					<span class="icon-globe2" aria-hidden="true">{{ $t("lang") }}</span>
 				</button>
