--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<script src="https://apis.google.com/js/platform.js"></script>
 	<script type="text/javascript" src="js/lang.js"></script>
 	</body>
 </html>
