--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
+	<script>console.log(typeof(gapi));</script>
 	<script type="text/javascript" src="js/lang.js"></script>
 	</body>
 </html>
