--- a/index.html
+++ b/index.html
@@ -417,6 +417,8 @@
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
 	<script src="js/bootstrap.min.js"></script>
+	<!-- bootstrap-notify.js -->
+	<script src="js/bootstrap-notify.js"></script>
 	<!-- Waypoints -->
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Flexslider -->
@@ -425,13 +427,12 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
-	
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
-	<script>console.log(typeof(gapi));</script>
+	<script>var _ggAuth = gapi;</script>
 	<script type="text/javascript" src="js/lang.js"></script>
 	</body>
 </html>
