--- a/index.html
+++ b/index.html
@@ -53,7 +53,28 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<style>
+	::-webkit-scrollbar {
+	  width: 5px;
+	}
 
+	/* Track */
+	::-webkit-scrollbar-track {
+	  box-shadow: inset 0 0 5px grey; 
+	  border-radius: 10px;
+	}
+ 
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+	  background: #827777b8; 
+	  border-radius: 10px;
+	}
+
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+	  background: #827777b8; 
+	}
+	</style>
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -100,7 +121,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_1.jpg);">
+				   	<li style="background-image: url('images/background.jpg');">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -109,7 +130,7 @@
 					   					<div class="desc">
 						   					<h1>{{ $t("hi") }} !<br>{{ $t("greeting") }} {{ $t("about.name") }}</h1>
 						   					<h2>{{ $t("about.fullname") }}</h2>
-												<p><a class="btn btn-primary btn-learn" href="$t('downloadLink')" target="_blank">{{ $t("download") }}<i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" :href="$t('downloadLink')" target="_blank">{{ $t("download") }}<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -314,7 +335,9 @@
 									   </div>
 									   <div class="timeline-label">
 											<h2><span class="text-primary">{{ $i18n.messages[$i18n.locale].experience.item[index].position }}</span>
-												<a href="#">({{ $i18n.messages[$i18n.locale].experience.item[index].company }})</a> 
+												<a v-if="$i18n.messages[$i18n.locale].experience.item[index].url != ''" 
+												 target="_blank" :href="$i18n.messages[$i18n.locale].experience.item[index].url">({{ $i18n.messages[$i18n.locale].experience.item[index].company }})</a> 
+												<a v-else href="javascript:void(0)" data-toggle="tooltip" data-placement="right" :title="$t('noWebsite')">({{ $i18n.messages[$i18n.locale].experience.item[index].company }})</a> 
 												<span>{{ $i18n.messages[$i18n.locale].experience.item[index].time }}</span></h2>
 											<p style="font-size: 12px;font-weight: bold;">{{ $i18n.messages[$i18n.locale].experience.item[index].project }}</p>
 											<ul>
@@ -331,7 +354,10 @@
 										</div>
 										<div class="timeline-label">
 											 <h2><span class="text-primary">{{ $i18n.messages[$i18n.locale].experience.item[index].position }}</span>
-												 <a href="#">({{ $i18n.messages[$i18n.locale].experience.item[index].company }})</a> 
+												<a v-if="$i18n.messages[$i18n.locale].experience.item[index].url != ''" 
+												 target="_blank" :href="$i18n.messages[$i18n.locale].experience.item[index].url">({{ $i18n.messages[$i18n.locale].experience.item[index].company }})</a>
+												<a v-else href="javascript:void(0)" data-toggle="tooltip" data-placement="right" :title="$t('noWebsite')">({{ $i18n.messages[$i18n.locale].experience.item[index].company }})</a> 
+												<span>{{ $i18n.messages[$i18n.locale].experience.item[index].time }}</span></h2> 
 												 <span>{{ $i18n.messages[$i18n.locale].experience.item[index].time }}</span></h2>
 											 <p style="font-size: 12px;font-weight: bold;">{{ $i18n.messages[$i18n.locale].experience.item[index].project }}</p>
 											 <ul>
