--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script>var _ggAuth = gapi;</script>
 	<script type="module" src="node_modules/axios/index.js"></script>
-	<script type="module" src="node_modules/github-api/dist/GitHub.js"></script>
-	<script type="module" src="node_modules/github-api/dist/GitHub.bundle.js"></script>
+	<script src="node_modules/github-api/dist/GitHub.js"></script>
+	<script src="node_modules/github-api/dist/GitHub.bundle.js"></script>
 	<script type="text/javascript" src="js/lang.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	</body>
