add google drive auth

--- a/index.html
+++ b/index.html
@@ -459,6 +459,8 @@
 	<script src="js/main.js"></script>
 	<script src="https://apis.google.com/js/platform.js"></script>
 	<script>var _ggAuth = gapi;</script>
+	<script src="https://apis.google.com/js/api.js"></script>
+	<script>var _ggDriveAuth = gapi;</script>
 	<script type="text/javascript" src="js/lang.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	</body>
