--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- Vuejs -->
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-	<script src="https://unpkg.com/vue-i18n/dist/vue-i18n.js"></script>	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-i18n/9.6.2/vue-i18n.cjs.js"
+	integrity="sha512-djs4S1klJEwWdeyLqcoqHjmTBgELL15Y5wIVmSzQ+7MYL9Q53KsqwQTrc9WZSrR/WaiT8wm+FidwELuSHDFbsQ=="
+	crossorigin="anonymous" referrerpolicy="no-referrer">
+	</script>
 	<!-- Lang file -->
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
