--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
+    <meta property="og:image" content="/images/about.jpg" />
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
 	<meta property="og:description" content=""/>
 	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
+	<meta name="twitter:image" content="/images/about.jpg" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+	<meta property="og:type" content="website" />
+	<meta property="og:ignore_canonical" content="true">
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="stylesheet" href="/fonts/icon/flaticon.css">
