--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Nguyễn Thế Mạnh</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
+	<meta name="description" content="Php developer" />
 	<meta name="keywords" content="" />
-	<meta name="author" content="" />
+	<meta name="author" content="nguyenthemanh26011996@gmail.com" />
 	<meta name="google-signin-client_id" content="458833184457-qp8rtn3ql1vsfka4urcb0iruu837jo3s.apps.googleusercontent.com">
 
   <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
+	<meta property="og:title" content="Nguyễn Thế Mạnh"/>
     <meta property="og:image" content="/images/about.jpg" />
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
+	<meta property="og:description" content="Php developer"/>
+	<meta name="twitter:title" content="Nguyễn Thế Mạnh" />
 	<meta name="twitter:image" content="/images/about.jpg" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
